sumo/tests/sumo/spec/flow/errors/neg_begin/errors.sumo
Error: Negative begin time in the definition of flow 'f1'.
Quitting (on error).
